--- a/MY_FMLR_EVK.ioc
+++ b/MY_FMLR_EVK.ioc
@@ -68,7 +68,7 @@ Mcu.Pin50=VP_ADC_TempSens_Input
 Mcu.Pin51=VP_ADC_Vref_Input
 Mcu.Pin52=VP_RTC_VS_RTC_Activate
 Mcu.Pin53=VP_RTC_VS_RTC_Calendar
-Mcu.Pin54=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin54=VP_RTC_VS_RTC_WakeUp_intern
 Mcu.Pin55=VP_SYS_VS_Systick
 Mcu.Pin6=PA14
 Mcu.Pin7=PA13
@@ -84,13 +84,15 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
-PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=BUTTON
+PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA0.GPIO_PuPd=GPIO_PULLDOWN
 PA0.Locked=true
-PA0.Signal=GPIO_Input
+PA0.Signal=GPXTI0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=DIO0
 PA1.Locked=true
@@ -432,8 +434,8 @@ RCC.Usart1ClockSelection=RCC_USART1CLKSOURCE_SYSCLK
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=16000000
 RCC.WatchDogFreq_Value=37000
-RTC.Alarm-Alarm\ A=RTC_ALARM_A
-RTC.IPParameters=Alarm-Alarm A
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
@@ -457,10 +459,10 @@ VP_ADC_Vref_Input.Mode=IN-Vrefint
 VP_ADC_Vref_Input.Signal=ADC_Vref_Input
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
-VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
